--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "MIT",
   "dependencies": {
     "camelcase": "^6.3.0",
+    "ejs": "^3.1.6",
     "express": "^4.17.2",
     "server": "^0.0.3"
   },
