--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.2",
     "mongodb": "^4.4.1",
+    "mongoose": "^6.2.6",
     "server": "^0.0.3"
   },
   "devDependencies": {
