--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.2",
     "mongodb": "^4.4.1",
     "mongoose": "^6.2.6",
+    "node-fetch": "^2.6.7",
     "server": "^0.0.3"
   },
   "devDependencies": {
