--- a/package.json
+++ b/package.json
@@ -24,6 +24,12 @@
     "server": "^0.0.3"
   },
   "devDependencies": {
+    "gulp": "^4.0.2",
+    "gulp-clean-css": "^4.3.0",
+    "gulp-cli": "^2.3.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-sourcemaps": "^3.0.0",
+    "gulp-uglify": "^3.0.2",
     "nodemon": "^2.0.15"
   }
 }
